--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "hammercode.org",
   "dependencies": {
-    "@zeit/next-stylus": "^1.0.1",
+    "autoprefixer": "^10.4.8",
     "next": "^12.2.5",
+    "postcss": "^8.4.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^1.7.2"
+    "tailwindcss": "^3.1.8"
   },
   "scripts": {
     "dev": "next dev",
