--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "build": "next build",
     "start": "next start",
     "export": "rm -rf .next out && next build && next export"
+  },
+  "devDependencies": {
+    "@types/node": "^18.7.3",
+    "@types/react": "^18.0.17",
+    "typescript": "^4.7.4"
   }
 }
