--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.8",
     "next": "^12.2.5",
+    "next-intl": "^2.7.4",
     "postcss": "^8.4.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
