--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hammercode.org",
   "dependencies": {
     "autoprefixer": "^10.4.8",
+    "markdown-to-jsx": "^7.1.7",
     "next": "^12.2.5",
     "next-intl": "^2.7.4",
     "postcss": "^8.4.16",
