--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "sharp": "^0.32.0",
     "tailwindcss": "^3.1.8"
   },
   "scripts": {
