--- a/package.json
+++ b/package.json
@@ -1,26 +1,50 @@
 {
-  "name": "hammercode.org",
-  "dependencies": {
-    "autoprefixer": "^10.4.8",
-    "markdown-to-jsx": "^7.1.7",
-    "next": "^13.0.3",
-    "next-intl": "^2.7.4",
-    "postcss": "^8.4.16",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1",
-    "sharp": "^0.32.0",
-    "tailwindcss": "^3.1.8"
-  },
+  "name": "next-template",
+  "version": "0.0.2",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "rm -rf .next out && next build && next export"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "preview": "next build && next start",
+    "typecheck": "tsc --noEmit",
+    "format:write": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
+    "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
+  },
+  "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.4.0",
+    "clsx": "^1.2.1",
+    "i18next": "^23.2.6",
+    "i18next-resources-to-backend": "^1.1.4",
+    "lucide-react": "0.105.0-alpha.4",
+    "next": "^13.4.4",
+    "next-intl": "^2.17.0",
+    "next-themes": "^0.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.1",
+    "sharp": "^0.31.3",
+    "tailwind-merge": "^1.12.0",
+    "tailwindcss-animate": "^1.0.5"
   },
   "devDependencies": {
-    "@types/node": "^18.7.3",
-    "@types/react": "^18.0.17",
-    "typescript": "^4.7.4"
+    "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
+    "@types/node": "^17.0.45",
+    "@types/react": "^18.2.7",
+    "@types/react-dom": "^18.2.4",
+    "@typescript-eslint/parser": "^5.59.7",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.41.0",
+    "eslint-config-next": "13.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-tailwindcss": "^3.12.0",
+    "postcss": "^8.4.24",
+    "prettier": "^2.8.8",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^4.9.5"
   }
 }
