--- a/package.json
+++ b/package.json
@@ -1,26 +1,34 @@
 {
-  "name": "hammercode.org",
-  "dependencies": {
-    "autoprefixer": "^10.4.8",
-    "markdown-to-jsx": "^7.1.7",
-    "next": "^13.0.3",
-    "next-intl": "^2.7.4",
-    "postcss": "^8.4.16",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1",
-    "sharp": "^0.32.0",
-    "tailwindcss": "^3.1.8"
-  },
+  "name": "hammercode-web",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "rm -rf .next out && next build && next export"
+    "lint": "next lint",
+    "format": "prettier --write .",
+    "check-format": "prettier --check ."
+  },
+  "dependencies": {
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.426.0",
+    "next": "14.2.5",
+    "react": "^18",
+    "react-dom": "^18",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "^18.7.3",
-    "@types/react": "^18.0.17",
-    "typescript": "^4.7.4"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
+    "postcss": "^8",
+    "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
