--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -31,7 +31,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-test
     environment: development
     steps:
       - name: Checkout Code
