--- a/package.json
+++ b/package.json
@@ -62,5 +62,8 @@
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
   },
-  "type": "module"
+  "resolutions": {
+    "wrap-ansi": "7.0.0",
+    "string-width": "4.1.0"
+  }
 }
