--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
+    "next-intl": "^3.17.6",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
