--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
   },
   "resolutions": {
     "wrap-ansi": "7.0.0",
-    "string-width": "4.1.0"
+    "string-width": "4.1.0",
+    "@typescript-eslint/typescript-estree": "^5.59.2"
   }
 }
