fix: test build

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn format && git add -A ."
+      "pre-commit": "yarn format && git add -A . --allow-empty"
     }
   },
   "dependencies": {
