--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,10 @@
   },
   "plugins": ["@typescript-eslint", "react"],
   "rules": {
-    "no-console": "warn"
+    "no-console": "warn",
+    "no-undef": "off",
+    "no-unused-vars": "off",
+    "react/no-unescaped-entities": "off",
+    "@next/next/no-page-custom-font": "off"
   }
 }
